fix: truncate only the textual value, not the numerical one

--- a/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
@@ -48,7 +48,6 @@
     text-align: right;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
   }
 
   &__part {
